# thesis_project

./: .gitmodules  README.md  TODO.list  helper.cpp  helper.h  mpc.h
project/: CMakeLists.txt  Makefile  configure.sh  demo_expand.cpp
project/benchmark/: CMakeLists.txt  ExternalProduct.cpp  example.cpp  openblas.cpp
project/include/: .gitignore  mpc_application.h
project/include/thesis/: barrier.h  batched_fft.h  batched_fft.h.temp  bootstrap.h  cipher.h  declarations.h  decomposition.h  extraction.h  fft.h  load_lib.h  memory_management.h  profiling_timer.h  random.h  stream.h  tfhe.h  tgsw.h  thread_management.h  threadpool.h  tlwe.h  tlwe_cipher.h  tlwe_function.h  torus.h  torus_utility.h  trgsw.h  trgsw_cipher.h  trgsw_function.h  trlwe.h  trlwe_cipher.h  trlwe_function.h
project/src/: CMakeLists.txt  FindMaxMPC.cpp  main.cpp  mpc_application.cpp
project/src/thesis/: batched_fft.cpp  cuda_batched_fft.cu  cuda_decomposition.cu  cuda_extraction.cu  cuda_memory_management.cu  cuda_stream.cu  cuda_tlwe_function.cu  cuda_torus_utility.cu  cuda_trgsw_function.cu  cuda_trlwe_function.cu  cxx_barrier.cpp  cxx_batched_fft.cpp  cxx_bootstrap.cpp  cxx_cipher.cpp  cxx_decomposition.cpp  cxx_extraction.cpp  cxx_memory_management.cpp  cxx_random.cpp  cxx_stream.cpp  cxx_thread_management.cpp  cxx_tlwe_cipher.cpp  cxx_tlwe_function.cpp  cxx_torus_utility.cpp  cxx_trgsw_cipher.cpp  cxx_trgsw_function.cpp  cxx_trlwe_cipher.cpp  cxx_trlwe_function.cpp  mpc.cpp  random.cpp  tfhe.cpp  threadpool.cpp  tlwe.cpp  torus.cpp  trgsw.cpp  trlwe.cpp
project/src/thesis/batched_fft/: cufft.cu  fftw.cpp
project/src/thesis/fft/: fftw_fft.cpp
project/src/thesis/memory_management/: cuda_memory_management.cu  cxx_memory_management.cpp
project/test/: CMakeLists.txt  example.cpp  fftw_lib.cpp  openblas.cpp  testBachedFFT.cpp  testDecomposition.cpp  testExtraction.cpp  testFFT.cpp  testMemoryManagement.cpp  testMpc.cpp  testStream.cpp  testTlwe.cpp  testTrgsw.cpp  testTrlwe.cpp  threadpool_eigen.cpp
