#
# Add Executable
#
INCLUDE_DIRECTORIES (${FFTW_INCULDE_DIR})
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis" THESIS)
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis/fft" THESIS_FFT)
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/benchmark" BENCHMARKS)
ADD_EXECUTABLE (mainBenchmark ${THESIS} ${THESIS_FFT} ${BENCHMARKS})
TARGET_LINK_LIBRARIES (mainBenchmark benchmark eigen ${FFTW_LIB})
ADD_DEPENDENCIES (mainBenchmark fftw)
