# Add Executable
INCLUDE_DIRECTORIES (${FFTW_INCULDE_DIR})
AUX_SOURCE_DIRECTORY ("${CMAKE_CURRENT_SOURCE_DIR}/thesis" THESIS)
AUX_SOURCE_DIRECTORY ("${CMAKE_CURRENT_SOURCE_DIR}/thesis/fft" THESIS_FFT)
AUX_SOURCE_DIRECTORY ("${CMAKE_CURRENT_SOURCE_DIR}/thesis/batched_fft" THESIS_BATCHED_FFT)
ADD_EXECUTABLE (main main.cpp ${THESIS} ${THESIS_FFT} ${THESIS_BATCHED_FFT})
TARGET_LINK_LIBRARIES (main eigen ${CMAKE_THREAD_LIBS_INIT} ${FFTW_LIB} ${CUDA_CUFFT_LIBRARIES})
ADD_DEPENDENCIES (main fftw)
