# Add Executable
INCLUDE_DIRECTORIES (${FFTW_INCULDE_DIR})
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis" THESIS)
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis/batched_fft" THESIS_BATCHED_FFT)
ADD_EXECUTABLE (main main.cpp mpc_application.cpp ${THESIS} ${THESIS_BATCHED_FFT})
TARGET_LINK_LIBRARIES (main eigen ${CMAKE_THREAD_LIBS_INIT} ${FFTW_LIB} ${CUDA_CUFFT_LIBRARIES})
ADD_DEPENDENCIES (main fftw)

# Add Demo
ADD_EXECUTABLE (FindMaxMPC FindMaxMPC.cpp mpc_application.cpp ${THESIS} ${THESIS_BATCHED_FFT})
TARGET_LINK_LIBRARIES (FindMaxMPC eigen ${CMAKE_THREAD_LIBS_INIT} ${FFTW_LIB} ${CUDA_CUFFT_LIBRARIES})
ADD_DEPENDENCIES (FindMaxMPC fftw)
