#
# Add Executable
#
INCLUDE_DIRECTORIES (${FFTW_INCULDE_DIR})
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis" THESIS)
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis/fft" THESIS_FFT)
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/test" TESTS)
ADD_EXECUTABLE (mainTest ${THESIS} ${THESIS_FFT} ${TESTS})
TARGET_LINK_LIBRARIES (mainTest gtest eigen ${FFTW_LIB})
ADD_DEPENDENCIES (mainTest fftw)
