# Add Executable
INCLUDE_DIRECTORIES (${FFTW_INCULDE_DIR})
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis" THESIS)
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis/batched_fft" THESIS_BATCHED_FFT)
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/src/thesis/memory_management" THESIS_MEMORY_MANAGEMENT)
AUX_SOURCE_DIRECTORY ("${CMAKE_SOURCE_DIR}/test" TESTS)
ADD_EXECUTABLE (mainTest ${THESIS} ${THESIS_BATCHED_FFT} ${THESIS_MEMORY_MANAGEMENT} ${TESTS})
TARGET_LINK_LIBRARIES (mainTest gtest eigen ${FFTW_LIB} ${CUDA_CUFFT_LIBRARIES})
ADD_DEPENDENCIES (mainTest fftw)
